# tr-movie-player

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: err.rs  http_server.rs  lib.rs  main.rs  media.rs  utils.rs
src/components/: HttpServerProvider.tsx  MovieControlView.tsx  MoviePlayerView.tsx  PlayItemView.tsx  PlayListView.tsx  RepeatItemView.tsx  RepeatListView.tsx  SortableContainer.tsx  TestView.tsx  useVideoControl.ts  utils.ts
src/listeners/: DropFileListener.tsx
src/routes/: AppLayout.tsx  ErrorView.tsx  MainView.tsx  MovieControlView.tsx  MoviePlayerView.tsx
src/stores/: checkedSubtitleStore.ts  currentTimeStore.ts  durationStore.ts  endTimeStore.ts  isMutedStore.ts  isPlayStore.ts  isRepeatOnceStore.ts  isRepeatStore.ts  playItemsStore.ts  playbackRateStore.ts  repeatDescStore.ts  repeatItemsStore.ts  screenTypeStore.ts  selectedPlayItemStore.ts  selectedRepeatItemStore.ts  selectedSubtitleStore.ts  startTimeStore.ts  subtitleSrcStore.ts  subtitleTypeStore.ts  subtitlesStore.ts  videoRefStore.ts  videoSrcStore.ts  volumeStore.ts
