[package]
name = "tr-movie-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tr_movie_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14.0"
axum = "0.8.4"
specta = "2.0.0-rc.22"
tauri-specta = {version = "2.0.0-rc.21", features = ["derive", "typescript", "javascript"] }
specta-typescript = "0.0.9"

rspc = "0.4.0"
rspc-axum = "0.3.0"
#rspc-tauri = { version = "0.1.1", features = [] }


tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tokio = {version = "1.47.1", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.12"
schemars = { version = "1.0.4", features = ["indexmap2"] }
http = "1.3.1"
#windows = { version = "0.61.3", features = [] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }

