[package]
name = "tr-movie-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tr_movie_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14.0"

specta = "2.0.0-rc.22"
tauri-specta = {version = "2.0.0-rc.21", features = ["derive", "typescript", "javascript"] }
specta-typescript = "0.0.9"

rspc = "0.4.0"
rspc-axum = "0.3.0"
#rspc-tauri = { version = "0.1.1", features = [] }

tauri-plugin-dialog = "2"
axum = { version = "0.8.4", features = [] }
tokio = {version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.16"
http-body-util = "0.1.3"
#headers = "0.4.1"
http = "1.3.1"
bytes = { version = "1.10.1" }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
thiserror = "2.0.12"
schemars = { version = "1.0.4", features = ["indexmap2"] }
#windows = { version = "0.61.3", features = [] }

mime_guess = "2.0.5"
futures = "0.3.31"
glob = "0.3.3"
globset = "0.4.16"
